# contribute

./: .gitignore  LICENSE  LICENSE-CONTENT  README.md  deploy-hetzner.sh
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  drafts.py  ids.py  main.py  models.py  notify.py  submissions.py  validation.py
backend/app/templates/: magic_link.txt.j2  submitter_receipt.txt.j2  team_notification.txt.j2
backend/tests/: conftest.py  test_db.py  test_drafts.py  test_health.py  test_ids.py  test_notify.py  test_submissions.py  test_validation.py
docs/: contributing-to-sops.md  deployment.md
ops/nginx/: contribute.conf
ops/systemd/: contribute-backend.service
ops/webhook/: hooks.json
schemas/: sop-frontmatter.schema.json  submission.schema.json
schemas/tests/: package-lock.json  package.json  sop-frontmatter.test.mjs  submission.test.mjs
scripts/: generate-sop-skeletons.mjs
site/: .gitignore  .prettierrc.json  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
site/e2e/: happy-path.spec.ts
sops/_shared/: biomass-measurement.md  metadata-schema.md  qc-requirements.md  shipping-logistics.md
sops/biomass/: algae-macroalgae.md  algae-microalgae.md  archaea.md  bacteria.md  fauna-macrofauna-environmental.md  fauna-macrofauna-reared.md  fauna-mesofauna-environmental.md  fauna-mesofauna-reared.md  fauna-microfauna.md  fungi-amf.md  fungi-filamentous.md  fungi-yeast.md  giant-viruses.md  plants-bryophytes.md  plants-vascular.md  protists-axenic.md  (+1 more)
(+49 files in other folders)
